--- a/style.css
+++ b/style.css
@@ -19,6 +19,14 @@ width: 70%;
     padding: 1% 5% ;
 
 }
+.full-ft {
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    border-radius: 20px;
+    padding: 1% 5% ;
+
+}
 .head{
 
     display:flex ;
